# petal

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
core/: pipeline.py  reader.py  transformer.py  writer.py
data/: example_input.txt  example_output_filtered.txt  output_file.txt
petal/data/: all_concatenated.txt  app_logs.txt  detected_pings.txt  source_1.txt  source_2.txt  source_3.txt  vm_events.txt
petal/examples/: example_01_noop.py  example_02_copy_file_to_file.py  example_03_splitting_streams_to_multiple_destinations.py  example_04_joining_multiple_streams_into_one.py  example_05_multi_step_etl.py
petal/src/: __init__.py  cli.py  logger.py  main.py
petal/src/core/: context.py  pipeline.py
petal/src/plugins/: EmptySource.py  FileReader.py  FileWriter.py  IdentityTransformer.py  Joiner.py  NoOpSink.py  RegexFilter.py  RegexMapper.py  Splitter.py  SqsWriter.py  StreamJoiner.py
petal/test/: unit_test.py
plugins/: FileReader.py  FileWriter.py  IdentityTransformer.py  SimplePipeline.py
scripts/: check_version_consistency.sh
src/: __init__.py
src/core/: pipeline.py  utils.py
src/core/operators/: BaseOperator.py  Mapper.py  NonTerminalOperator.py  Reader.py  (+3 more)
src/data/: example_output_unfiltered.txt
src/examples/: 01_noop.py  02_copy_file_to_file.py  03_splitting_streams_to_multiple_destinations.py
src/plugins/: EmptySource.py  FileReader.py  FileWriter.py  IdentityTransformer.py  NoOpSink.py  RegexFilter.py  Splitter.py
test/: unit_test.py
(+8 files in other folders)
